--- a/index.html
+++ b/index.html
@@ -63,6 +63,11 @@ function initializeCP()
 <body onload="onBodyLoad()">
 		<div id='initialLoading'></div>
 <script>
+// This is temporary redirect to unavailable page
+setTimeout(function(){
+window.location.href="https://saskatchewanpreventioninstitute.github.io/The-STI-Adventures/currently-unavailable.html"; // The URL that will be redirected too.
+}, 1000); // The bigger the number the longer the delay.
+	
 		(function()
 		{
 			if(document.documentMode < 9)
