added unavailable text

--- a/currently-unavailable.html
+++ b/currently-unavailable.html
@@ -1,1 +1,1 @@
-Sample page
+<div style="font-size: 20px;margin:0 auto;text-align: center;">The STI Adventures is currently unavailable and is being updated. If you are interested in providing feedback on the updated version, please contact <a href="mailto:info@skprevention.ca" target="_blank">info@skprevention.ca.</a></div>
